# NexusCrypt

./: .gitignore  README.md  README_IT.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml  release.yml.save
src/: App.tsx  i18n.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  file_ops.rs  kdf.rs  keygen.rs  lib.rs  main.rs
src/components/: DecryptPanel.tsx  DropZone.tsx  EncryptPanel.tsx  KeyGenerator.tsx  Notification.tsx  ProgressBar.tsx  Settings.tsx  VaultList.tsx
src/hooks/: useTauriDragDrop.ts  useTauriProgress.ts
